# token-obsession

./: .env.example  .gitignore  README.md  pyproject.toml
src/token_obsession/: __init__.py  main.py
src/token_obsession/api/: app.py
src/token_obsession/core/: config.py  models.py
src/token_obsession/mcp/: server.py
src/token_obsession/services/: birdeye.py  dexscreener.py  geckoterminal.py  positions.py  safe_sell.py  scoring.py  sell_evaluation.py  sell_proposals.py  uniswap.py
src/token_obsession/workers/: __init__.py  sell_monitor.py
tests/: test_geckoterminal.py  test_positions.py  test_scoring.py  test_sell_evaluation.py  test_sell_worker.py  test_uniswap.py
