[project]
name = "token-obsession"
version = "0.1.0"
description = "Base-first MCP server for ranked token discovery."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "mcp[cli]>=1.27,<2",
  "pydantic-settings>=2.10.0,<3.0.0",
  "safe-eth-py>=7.21.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.scripts]
token-obsession-sell-worker = "token_obsession.workers.sell_monitor:main"

[dependency-groups]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "ruff>=0.12.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/token_obsession"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
